# SkillGraphy

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: token_comparison.py
examples/: basic_usage.py  hermes_integration.py
skillgraph/: __init__.py  cli.py  embedder.py  graph.py  indexer.py  retriever.py  server.py
skillgraph/adapters/: __init__.py  base.py  claude_code.py  generic.py  hermes.py
tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_embedder.py  test_graph.py  test_indexer.py  test_retriever.py
