[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillgraph"
version = "0.1.0"
description = "Turn flat skill lists into a knowledge graph. Dynamic skill retrieval for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "shrine", email = "w815336634@outlook.com" },
]
keywords = [
    "ai-agent",
    "skill-routing",
    "knowledge-graph",
    "semantic-search",
    "llm",
    "skill-management",
    "embedding",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2",
]
openai = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/shrine/skillgraph"
Repository = "https://github.com/shrine/skillgraph"
Issues = "https://github.com/shrine/skillgraph/issues"

[project.scripts]
skillgraph = "skillgraph.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]